<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chatrcmmappii.ChatRCMMAppIIListActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_zumbido"
        android:icon="@drawable/ic_action_warning"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/action_zumbido"/>
    
    <item
        android:id="@+id/action_picture"
        android:icon="@drawable/ic_action_picture"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/action_picture"/>
    <item
        android:id="@+id/action_mic"
        android:icon="@drawable/ic_action_mic"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_mic"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_delete"/>

</menu>