<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.estadosmartphone.MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewIdDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IdDevice" />

            <TextView
                android:id="@+id/textViewIdDeviceRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewLineNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LineNumber" />

            <TextView
                android:id="@+id/textViewLineNumberRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewSoftwareVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SoftwareVersion" />

            <TextView
                android:id="@+id/textViewSoftwareVersionRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewOperatorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OperatorName" />

            <TextView
                android:id="@+id/textViewOperatorNameRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewSimCountryIso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SimCountryIso" />

            <TextView
                android:id="@+id/textViewSimCountryIsoRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewSimOperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SimOperator" />

            <TextView
                android:id="@+id/textViewSimOperatorRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewSimSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SimSerialNumber" />

            <TextView
                android:id="@+id/textViewSimSerialNumberRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewSubscriberId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SubscriberId" />

            <TextView
                android:id="@+id/textViewSubscriberIdRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewNetworkType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NetworkType" />

            <TextView
                android:id="@+id/textViewNetworkTypeRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:id="@+id/textViewPhoneType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PhoneType" />

            <TextView
                android:id="@+id/textViewPhoneTypeRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <Button
                android:id="@+id/buttonObtener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ObtenerDatos" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
