<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e5e7f9"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.estadosmartphoneii.EstadoSmartphoneIIActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewEstadoLlamada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadoLlamada"
            android:textColor="#000d33"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEstadoLlamadaRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewEstadoConexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadoConexion"
            android:textColor="#000d33"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEstadoConexionRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewEstadoServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estadoServicio"
            android:textColor="#000d33"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEstadoServicioRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewLocalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localizacion"
            android:textColor="#000d33"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewLocalizacionRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewNivelSignal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nivelSignal"
            android:textColor="#000d33"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewSignal"
            android:layout_width="wrap_content"
            android:layout_height="147dp"
            android:scaleType="fitStart"
            android:src="@drawable/level4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos"
            android:textColor="#000d33"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewTrafico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/nodata" />
    </LinearLayout>

</LinearLayout>